welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:4: error: type mismatch;
 found   : Unit
 required: Boolean
  } else if (10+a<10 || 10+b<10) {
         ^